2013-11-27  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/reg.c: Implemented regsize() to get the effective size of
                             the register
    * las/arch/x86_64/reg.h: Added regsize()

    * las/arch/x86_64/reg.c: Added MM0-MM7 and XMM0-XMM7
    * las/arch/x86_64/reg.h: Added MM0-MM7 and XMM0-XMM7


2013-11-26  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/reg.c: Moved register-related functions from
                             las/arch/x86_64/main.c
    * las/arch/x86_64/reg.h: Moved register-related definitions from
                             las/arch/x86_64/main.c

    * las/arch/x86_64/eval.c: Moved operand evaluation related functions from
                              las/arch/x86_64/main.c
    * las/arch/x86_64/eval.h: Moved operand evaluation related definitions from
                              las/arch/x86_64/main.c


2013-11-25  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Moved from las/arch/x86_64.c
    * las/arch/x86_64.c: Moved to las/arch/x86_64/main.c


2013-11-25  Hirochika Asai  <asai@scyphus.co.jp>

    * las/assembler.c: Implementing assembler
    * las/arch/x86_64.c: Added, implementing assembler
    * las/las.c: Implementing assembler
    * las/las.h: Implementing assembler

    * las/arch/x86_64.c: Added the description of XOR instruction


2013-11-20  Hirochika Asai  <asai@scyphus.co.jp>

    * las/parser.c: Fixed bugs in parse_expr_atom()


2013-11-19  Hirochika Asai  <asai@scyphus.co.jp>

    * las/instr.c: Aded; moved functions related to statements and instructions
                   from las/parser.c
    * las/instr.h: Added this header file corresponding to las/instr.c
    * las/parser.c: Implemented parser functions and moved some functions to
                    las/instr.c
    * las/parser.h: Changed the prototype declarations of parser functions
                    to return statements


2013-11-17  Hirochika Asai  <asai@scyphus.co.jp>
